# synchronize

sources/: AUTHORS  ChangeLog  Makefile.am  TODO  acinclude.m4  configure.ac  preferences  reconf  synchronize.desktop
sources/debian/: config  control  dirs  postinst  postinst.bak  rules  templates
sources/debian/.svn/: dir-wcprops  entries
sources/debian/.svn/text-base/: changelog.svn-base  control.svn-base  copyright.svn-base  manpage.1.svn-base  menu.svn-base  templates.svn-base
sources/debian/.svn/wcprops/: changelog.svn-work  compat.svn-work  config.svn-work  control.svn-work  copyright.svn-work  dirs.svn-work  docs.svn-work  manpage.1.svn-work  menu.svn-work  postinst.svn-work  rules.svn-work  templates.svn-work
sources/debian/po/: es.po
sources/debian/po/.svn/: dir-wcprops  entries
sources/debian/po/.svn/text-base/: templates.pot.svn-base
sources/debian/po/.svn/wcprops/: POTFILES.in.svn-work  es.po.svn-work  templates.pot.svn-work
sources/src/.svn/: dir-wcprops  entries
sources/src/synchronize/: .project  .settings
sources/src/synchronize/.lang/: #project.pot  Utils.pot  clsInotify.pot  clsMain.pot  clsUnison.pot  es.mo  es.po
sources/src/synchronize/.lang/.svn/: dir-wcprops  entries
sources/src/synchronize/.svn/: dir-wcprops  entries
sources/src/synchronize/.svn/text-base/: .project.svn-base  .settings.svn-base  clsInotify.class.svn-base  clsMain.class.svn-base
sources/src/synchronize/.svn/wcprops/: .directory.svn-work  .icon.png.svn-work  .project.svn-work  .settings.svn-work  Utils.class.svn-work  clsInotify.class.svn-work  (+3 more)
(+8 files in other folders)
